src/test/deca/syntax/invalid/decaObjet/multi_line_comment/07_plus_slash_debut.deca
// Description:
//    tests de programme incorrect lexicalement : 
//    il y a un / en trop pour le multi lignes commentaire au début
//
// Resultats:
//    07_plus_slash_debut.deca:11:4
//
// Historique:
//    cree le 14/06/2022
{
    //*a;
    aaa;
    aaaa;
    */

}